examples/datalog/12_errors/26_wrong_arg_count_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_wrong_args
Knowledge graph 'test_wrong_args' created.
Switched to knowledge graph: test_wrong_args
> .kg use test_wrong_args
Switched to knowledge graph: test_wrong_args
> +embeddings[(1, [0.1, 0.2, 0.3]), (2, [0.4, 0.5, 0.6])].
Inserted 2 fact(s) into 'embeddings'.
> ?- embeddings(Id, V), Dist = euclidean(V).
Script error: Query execution failed: Function 'euclidean' requires 2 argument(s), but 1 provided
